--- a/generators/blank/app/views/pages/layouts/default.liquid
+++ b/generators/blank/app/views/pages/layouts/default.liquid
@@ -3,7 +3,7 @@ title: Default layout
 is_layout: false
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ locale }}">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
