--- a/generators/content_type/app/content_types/%slug%.yml.tt
+++ b/generators/content_type/app/content_types/%slug%.yml.tt
@@ -25,6 +25,12 @@ order_by: manually
 # Array of emails to be notified of new entries made with the public API
 # public_submission_accounts: ['john@example.com']
 
+# Add the files attached to the form to the notification email
+# public_submission_email_attachments: false
+
+# Set the title of the notification email
+# public_submission_title_template: "{{ entry.name }} wants to reach you"
+
 # we recommend to require Google Recaptcha when submitting the form
 # if the public submission attribute is enabled in order to prevent spams
 # recaptcha_required: true
