--- a/generators/blank/package.json.tt
+++ b/generators/blank/package.json.tt
@@ -14,6 +14,7 @@
   "dependencies": {
   },
   "devDependencies": {
+    "autoprefixer": "^9.7.3",
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "babel-loader": "^8.0.5",
